--- a/.github/workflows/l2geth_ci.yml
+++ b/.github/workflows/l2geth_ci.yml
@@ -7,12 +7,12 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18.x
+        go-version: 1.17.x
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Lint
       run: |
-        rm -rf $HOME/.cache/golangci-lint
+        rm -rf ./build/cache/golangci-lint
         make lint
     - name: Test
       run: |
